<resources>
    <string name="app_name">TwitterClone</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="login">Login</string>
    <string name="go_to_signup">No Account? go to signup</string>
    <string name="user_name">user name</string>
    <string name="signup">SignUp</string>
    <string name="existing_user_go_to_login">Existing user? go to login</string>
    <string name="hint_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="sign_out">Sign Out</string>
    <string name="what_s_up">what\'s up</string>
</resources>
