<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ProfileActivity">

    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                            android:fillViewport="true">
        <RelativeLayout
                android:id="@+id/rl_profile_container"
                android:layout_width="match_parent" 
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/grid_3x"
                android:layout_marginBottom="@dimen/grid_3x"
                android:gravity="center_horizontal"
        >
            <ImageView
                    android:id="@+id/photoIV"
                    android:layout_width="@dimen/standard_width" android:layout_height="@dimen/standard_width"
                    android:src="@drawable/default_user"
                    />
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameTIL_profile"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
            android:layout_below="@id/photoIV">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTIL_profile"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/grid_2x"
            android:layout_below="@id/usernameTIL_profile">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email" android:layout_alignStart="@+id/emailTIL_profile"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:id="@+id/btnAppy"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_height"
                    android:layout_below="@id/emailTIL_profile"
                    android:layout_marginBottom="@dimen/grid_2x"
                    android:text="@string/apply"
                    android:textAllCaps="false"
                    android:onClick="onApply"
                    style="@style/standardbutton"
            />

            <Button
                    android:id="@+id/btnSignOut"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_height"
                    android:layout_below="@id/btnAppy"
                    android:layout_marginBottom="@dimen/grid_2x"
                    android:text="@string/sign_out"
                    android:textAllCaps="false"
                    android:onClick="onSignOut"
                    style="@style/standardbutton"
            />
            
        </RelativeLayout>
        

    </androidx.core.widget.NestedScrollView>
    <LinearLayout
            android:id="@+id/linear_pb_container_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/transparent_grey"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>