<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                           android:fillViewport="true"
                                           >
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/title" android:layout_margin="@dimen/grid_2x"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTIL"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/grid_2x">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTIL"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emailTIL"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/grid_2x">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hint_password"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_height"
                    android:layout_below="@id/passwordTIL"
                    android:layout_centerHorizontal="true"
                    android:text="@string/login"
                    style="@style/standardbutton"
                    android:layout_margin="2dp"
                    android:textAllCaps="false"
                    android:onClick="onClickLogin"
            />
            <TextView android:id="@+id/tvSignUp" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/btnLogin"
                      android:layout_centerHorizontal="true"
                      android:layout_margin="@dimen/grid_2x"
                      android:clickable="true"
                      android:text="@string/go_to_signup"
                      style="@style/linktext"
                      android:onClick="onClickSignUp"
            />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
            android:id="@+id/linear_pb_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/transparent_grey"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>